[gd_scene load_steps=5 format=3 uid="uid://cleq2v7001clu"]

[ext_resource type="Script" path="res://title_screen.gd" id="1_a3q3r"]
[ext_resource type="PackedScene" uid="uid://dk8qx15keto30" path="res://GlobalAudio.tscn" id="2_ntfih"]
[ext_resource type="Texture2D" uid="uid://hpbys4bgukgj" path="res://dada.png" id="3_nu7wa"]

[sub_resource type="GDScript" id="GDScript_3agqk"]
script/source = "extends Button
"

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a3q3r")

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.001
anchor_top = 0.002
anchor_right = 0.001
anchor_bottom = 0.002
offset_left = -1.152
offset_top = -1.298
offset_right = 1149.85
offset_bottom = 648.702
texture = ExtResource("3_nu7wa")
expand_mode = 1

[node name="StartGame" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.442
anchor_top = 0.202
anchor_right = 0.563
anchor_bottom = 0.362
offset_left = -0.332031
offset_top = -0.170006
offset_right = 0.10199
offset_bottom = 0.229996
theme_override_colors/font_disabled_color = Color(0, 0.733333, 0, 1)
theme_override_colors/font_color = Color(0.854902, 0.615686, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 1, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 1, 1)
text = "PLAY"

[node name="OpenSettings" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.444
anchor_top = 0.444
anchor_right = 0.564
anchor_bottom = 0.59
offset_left = -0.424042
offset_top = 0.259979
offset_right = 0.0559692
offset_bottom = -0.150024
theme_override_colors/font_color = Color(0.854902, 0.615686, 0, 1)
text = "SETTINGS"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.293
anchor_top = 0.01
anchor_right = 0.712
anchor_bottom = 0.149
offset_left = 0.521973
offset_top = 0.15
offset_right = 0.247986
offset_bottom = -0.165001
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0.945098, 0, 0, 1)
text = "Button Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitGame" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.453
anchor_top = 0.681
anchor_right = 0.563
anchor_bottom = 0.773
offset_left = -11.838
offset_top = -13.385
offset_right = 0.10199
offset_bottom = 11.795
theme_override_colors/font_color = Color(0.854902, 0.615686, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
text = "EXIT"
script = SubResource("GDScript_3agqk")

[node name="AudioStreamPlayer" parent="." instance=ExtResource("2_ntfih")]
stream = null
autoplay = true
bus = &"Music"

[connection signal="pressed" from="StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="OpenSettings" to="." method="_on_open_settings_pressed"]
[connection signal="pressed" from="ExitGame" to="." method="buttonPressed"]
